
[TestTemplate_NBuildCmd_NOutputDir - 1]
FROM node:18

ENV PORT=8080
WORKDIR /src

COPY package.json package-lock.json* yarn.lock* pnpm-lock.yaml* ./

RUN yarn install

COPY . .

# Build if we can build it



EXPOSE 8080
CMD yarn start


---

[TestTemplate_NBuildCmd_OutputDir_NSSR - 1]
FROM node:18

ENV PORT=8080
WORKDIR /src

COPY package.json package-lock.json* yarn.lock* pnpm-lock.yaml* ./

RUN yarn install

COPY . .

# Build if we can build it



FROM nginx:alpine as runtime

COPY --from=build /src/dist /usr/share/nginx/html/static
RUN echo "\
    server { \
        listen 8080; \
        root /usr/share/nginx/html/static; \
        location / { \
            try_files \$uri \$uri.html \$uri/index.html /404.html =404; \
        } \
    }"> /etc/nginx/conf.d/default.conf
EXPOSE 8080


---

[TestTemplate_NBuildCmd_OutputDir_SSR - 1]
FROM node:18

ENV PORT=8080
WORKDIR /src

COPY package.json package-lock.json* yarn.lock* pnpm-lock.yaml* ./

RUN yarn install

COPY . .

# Build if we can build it



FROM nginx:alpine as runtime

COPY --from=build /src/dist /usr/share/nginx/html/static
RUN echo "\
    server { \
        listen 8080; \
        root /usr/share/nginx/html/static; \
        location / { \
            try_files \$uri /index.html; \
        } \
    }"> /etc/nginx/conf.d/default.conf
EXPOSE 8080


---

[TestTemplate_BuildCmd_NOutputDir - 1]
FROM node:18

ENV PORT=8080
WORKDIR /src

COPY package.json package-lock.json* yarn.lock* pnpm-lock.yaml* ./

RUN yarn install

COPY . .

# Build if we can build it
RUN yarn build


EXPOSE 8080
CMD yarn start


---

[TestTemplate_BuildCmd_OutputDir - 1]
FROM node:18

ENV PORT=8080
WORKDIR /src

COPY package.json package-lock.json* yarn.lock* pnpm-lock.yaml* ./

RUN yarn install

COPY . .

# Build if we can build it
RUN yarn build


FROM nginx:alpine as runtime

COPY --from=build /src/dist /usr/share/nginx/html/static
RUN echo "\
    server { \
        listen 8080; \
        root /usr/share/nginx/html/static; \
        location / { \
            try_files \$uri /index.html; \
        } \
    }"> /etc/nginx/conf.d/default.conf
EXPOSE 8080


---
